--- a/style.css
+++ b/style.css
@@ -7,12 +7,20 @@ header {
   background-color: #fff;
 }
 
-header img {
-  width: 450px;
+.title {
   margin: auto;
   display: flex;
   align-self: center;
   justify-content: center;
+}
+
+header p {
+  text-align: center;
+  color: #fff;
+  background-color: #82b1bd;
+  font-size: 60px;
+  padding: 0 20px 0 20px;
+  margin: 10px;
 }
 
 .myStyle {
@@ -72,6 +80,7 @@ input {
   text-align: center;
   font-family: 'Titillium Web', sans-serif;
   font-size: 24px;
+  size: 40;
 }
 
 input:focus {
@@ -87,4 +96,58 @@ input:focus {
   font-family: 'Titillium Web', sans-serif;
   font-size: 18px;
   text-align: center;
+}
+
+.play-again {
+  text-decoration: none;
+  color: #fff;
+  background-color: #82b1bd;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+/* mobile version */
+
+@media only screen and (max-width: 992px) {
+  html {
+    display: table;
+    margin: auto;
+  }
+  body {
+    font-size: 50px;
+  }
+  header {
+    padding-top: 30px;
+  }
+  .title {
+    font-size: 75px;
+  }
+  #r-words {
+    font-size: 50px;
+    line-height: 80px;
+  }
+  .words {
+    height: 80px;
+  }
+  #textbox {
+    font-size: 50px;
+  }
+  .main-container p, .main-container span {
+    font-size: 50px;
+    width: 500px;
+    margin: auto;
+  }
+  #timer {
+    font-size: 50px;
+    padding: 30px;
+  }
+  .t-class {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  input {
+    border-bottom: solid 5px #82b1bd;
+    size: 20;
+  }
 }
